log/build_2025-09-18_11-41-32/propeller_controller/stderr.log
  File "/home/antoni/gazebo_maritime_ws/install/lib/python3.12/site-packages/propeller_controller/keyboard_controller.py", line 70
    def show_manual()
                     ^
SyntaxError: expected ':'

